--- a/index.html
+++ b/index.html
@@ -30,12 +30,9 @@
           <div class="inner">
             <h1>WELCOME TO THREECLIPSE</h1>
             <p>
-              We’re ThreEclipse, and we’re disrupting the industry with our
-              groundbreaking business idea. Our founding team is made up of
-              talented individuals with the right mix of tech and business
-              skills. This groundbreaking and scalable business model is often
-              featured in the media, so look out for mentions of our IT Startup
-              Company.
+              We are ThreEclipse, and we are specialized in customizing office automation, audio & visual equipment, ensuring we have the right solution for you. We focus in Retail, QSR, Airport, DOOH, Corporate, Control Room, Education, Sports, Broadcasting, Healthcare, Hospitality
+
+
             </p>
           </div>
         </div>
