--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <p>
             We are ThreEclipse, and we are specialized in customizing office
             automation, audio & visual equipment, ensuring we have the right
-            solution for you. We focus in Retail, QSR, Airport, DOOH, Corporate,
+            solution for you. We focus in Retail, QSR, Airport, Corporate,
             Control Room, Education, Sports, Broadcasting, Healthcare,
             Hospitality
           </p>
